--- a/Poseidon/Poseidon.csproj
+++ b/Poseidon/Poseidon.csproj
@@ -66,14 +66,68 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Models\AddOrderDescr.cs" />
+    <Compile Include="Models\AddOrderResponse.cs" />
+    <Compile Include="Models\AddOrderResult.cs" />
+    <Compile Include="Models\CancelOrderResponse.cs" />
+    <Compile Include="Models\CancelOrderResult.cs" />
+    <Compile Include="Models\FeeInfo.cs" />
+    <Compile Include="Models\GetBalanceResponse.cs" />
+    <Compile Include="Models\GetDepositAddressesResponse.cs" />
+    <Compile Include="Models\GetDepositAddressesResult.cs" />
+    <Compile Include="Models\GetDepositMethodsResponse.cs" />
+    <Compile Include="Models\GetDepositMethodsResult.cs" />
+    <Compile Include="Models\GetDepositStatusResponse.cs" />
+    <Compile Include="Models\GetDepositStatusResult.cs" />
+    <Compile Include="Models\GetLedgerResponse.cs" />
+    <Compile Include="Models\GetLedgerResult.cs" />
+    <Compile Include="Models\GetOpenPositionsResponse.cs" />
+    <Compile Include="Models\GetOrderBookResponse.cs" />
+    <Compile Include="Models\GetRecentSpreadResult.cs" />
+    <Compile Include="Models\GetRecentTradesResult.cs" />
+    <Compile Include="Models\GetTradeBalanceResponse.cs" />
+    <Compile Include="Models\GetTradesHistoryResponse.cs" />
+    <Compile Include="Models\GetTradesHistoryResult.cs" />
+    <Compile Include="Models\GetTradeVolumeResponse.cs" />
+    <Compile Include="Models\GetTradeVolumeResult.cs" />
+    <Compile Include="Models\GetWithdrawInfoResponse.cs" />
+    <Compile Include="Models\GetWithdrawInfoResult.cs" />
+    <Compile Include="Models\GetWithdrawStatusResponse.cs" />
+    <Compile Include="Models\GetWithdrawStatusResult.cs" />
+    <Compile Include="Models\KrakenOrder.cs" />
+    <Compile Include="Models\LedgerInfo.cs" />
+    <Compile Include="Models\AssetInfo.cs" />
+    <Compile Include="Models\AssetPair.cs" />
+    <Compile Include="Models\GetAssetInfoResponse.cs" />
+    <Compile Include="Models\GetAssetPairsResponse.cs" />
+    <Compile Include="Models\GetOHLCResponse.cs" />
+    <Compile Include="Models\GetOHLCResult.cs" />
+    <Compile Include="Models\GetServerTimeResponse.cs" />
+    <Compile Include="Models\GetServerTimeResult.cs" />
+    <Compile Include="Models\GetTickerResponse.cs" />
     <Compile Include="KrakenAPI.cs" />
     <Compile Include="KrakenException.cs" />
+    <Compile Include="Models\OHLC.cs" />
+    <Compile Include="Models\OrderBook.cs" />
+    <Compile Include="Models\OrderDescription.cs" />
+    <Compile Include="Models\OrderInfo.cs" />
+    <Compile Include="PositionInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Models\ResponseBase.cs" />
+    <Compile Include="Models\Ticker.cs" />
+    <Compile Include="Models\QueryLedgersResponse.cs" />
+    <Compile Include="Models\QueryOrdersResponse.cs" />
+    <Compile Include="Models\QueryTradesResponse.cs" />
+    <Compile Include="Models\SpreadItem.cs" />
+    <Compile Include="Models\Trade.cs" />
+    <Compile Include="Models\TradeBalanceInfo.cs" />
+    <Compile Include="Models\TradeInfo.cs" />
+    <Compile Include="Models\WithdrawCancelResponse.cs" />
+    <Compile Include="Models\WithdrawResponse.cs" />
+    <Compile Include="Models\WithdrawResult.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Models\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.5">
       <Visible>False</Visible>
