--- a/Poseidon/Poseidon.csproj
+++ b/Poseidon/Poseidon.csproj
@@ -71,6 +71,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="TableParser.cs" />
     <Compile Include="Models\AccountBalance.cs" />
     <Compile Include="Models\AssetInfo.cs" />
     <Compile Include="Models\AssetPairs.cs" />
