--- a/Poseidon/Poseidon.csproj
+++ b/Poseidon/Poseidon.csproj
@@ -52,10 +52,6 @@
     <StartupObject>Poseidon.Program</StartupObject>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Colorful.Console, Version=1.1.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Colorful.Console.1.1.2\lib\net45\Colorful.Console.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
     <Reference Include="Newtonsoft.Json, Version=10.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.10.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
       <Private>True</Private>
@@ -128,6 +124,7 @@
     <Compile Include="Models\Old\WithdrawCancelResponse.cs" />
     <Compile Include="Models\Old\WithdrawResponse.cs" />
     <Compile Include="Models\Old\WithdrawResult.cs" />
+    <Compile Include="Wrapper.cs" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
