--- a/Poseidon.Test/packages.config
+++ b/Poseidon.Test/packages.config
@@ -3,7 +3,7 @@
   <package id="EntityFramework" version="6.0.0" targetFramework="net45" />
   <package id="NUnit" version="3.5.0" targetFramework="net45" />
   <package id="System.Data.SQLite" version="1.0.105.2" targetFramework="net45" />
-  <package id="System.Data.SQLite.Core" version="1.0.105.2" targetFramework="net45" />
-  <package id="System.Data.SQLite.EF6" version="1.0.105.2" targetFramework="net45" />
-  <package id="System.Data.SQLite.Linq" version="1.0.105.2" targetFramework="net45" />
+  <package id="System.Data.SQLite.Core" version="1.0.105.2" targetFramework="net45" requireReinstallation="true" />
+  <package id="System.Data.SQLite.EF6" version="1.0.105.2" targetFramework="net45" requireReinstallation="true" />
+  <package id="System.Data.SQLite.Linq" version="1.0.105.2" targetFramework="net45" requireReinstallation="true" />
 </packages>
