--- a/Poseidon/Poseidon.csproj
+++ b/Poseidon/Poseidon.csproj
@@ -141,6 +141,8 @@
     <Compile Include="Models\Old\WithdrawResult.cs" />
     <Compile Include="Wrapper.cs" />
     <Compile Include="FiatCurrency.cs" />
+    <Compile Include="Models\FiatCurrency\EuropeanCentralBankResponse.cs" />
+    <Compile Include="Models\FiatCurrency\Currency.cs" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.5">
@@ -158,6 +160,9 @@
     <None Include="App.config" />
     <None Include="libsqlite3.dylib" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Models\FiatCurrency\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\System.Data.SQLite.Core.1.0.105.2\build\net45\System.Data.SQLite.Core.targets" />
