--- a/Poseidon/Poseidon.csproj
+++ b/Poseidon/Poseidon.csproj
@@ -81,68 +81,67 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Models\CurrencyLog.cs" />
-    <Compile Include="Models\Old\PositionInfo.cs" />
     <Compile Include="TableParser.cs" />
-    <Compile Include="Models\AccountBalance.cs" />
-    <Compile Include="Models\AssetInfo.cs" />
-    <Compile Include="Models\AssetPairs.cs" />
-    <Compile Include="Models\OHLC.cs" />
-    <Compile Include="Models\Old\AddOrderDescr.cs" />
-    <Compile Include="Models\Old\AddOrderResponse.cs" />
-    <Compile Include="Models\Old\AddOrderResult.cs" />
-    <Compile Include="Models\Old\CancelOrderResponse.cs" />
-    <Compile Include="Models\Old\CancelOrderResult.cs" />
-    <Compile Include="Models\Old\FeeInfo.cs" />
-    <Compile Include="Models\Old\GetDepositAddressesResponse.cs" />
-    <Compile Include="Models\Old\GetDepositAddressesResult.cs" />
-    <Compile Include="Models\Old\GetDepositMethodsResponse.cs" />
-    <Compile Include="Models\Old\GetDepositMethodsResult.cs" />
-    <Compile Include="Models\Old\GetDepositStatusResponse.cs" />
-    <Compile Include="Models\Old\GetDepositStatusResult.cs" />
-    <Compile Include="Models\Old\GetLedgerResponse.cs" />
-    <Compile Include="Models\Old\GetLedgerResult.cs" />
-    <Compile Include="Models\Old\GetOpenPositionsResponse.cs" />
-    <Compile Include="Models\Old\GetTradeBalanceResponse.cs" />
-    <Compile Include="Models\Old\GetTradesHistoryResponse.cs" />
-    <Compile Include="Models\Old\GetTradesHistoryResult.cs" />
-    <Compile Include="Models\Old\GetTradeVolumeResponse.cs" />
-    <Compile Include="Models\Old\GetTradeVolumeResult.cs" />
-    <Compile Include="Models\Old\GetWithdrawInfoResponse.cs" />
-    <Compile Include="Models\Old\GetWithdrawInfoResult.cs" />
-    <Compile Include="Models\Old\GetWithdrawStatusResponse.cs" />
-    <Compile Include="Models\Old\GetWithdrawStatusResult.cs" />
-    <Compile Include="Models\Old\KrakenOrder.cs" />
-    <Compile Include="Models\Old\LedgerInfo.cs" />
-    <Compile Include="Models\Old\GetTickerResponse.cs" />
     <Compile Include="KrakenAPI.cs" />
     <Compile Include="KrakenException.cs" />
-    <Compile Include="Models\Old\OrderDescription.cs" />
-    <Compile Include="Models\Old\OrderInfo.cs" />
-    <Compile Include="Models\OHLCSet.cs" />
-    <Compile Include="Models\OrderBook.cs" />
-    <Compile Include="Models\OrderBookOrder.cs" />
-    <Compile Include="Models\RecentSpread.cs" />
-    <Compile Include="Models\SpreadItem.cs" />
-    <Compile Include="Models\Trade.cs" />
-    <Compile Include="Models\RecentTrades.cs" />
-    <Compile Include="Models\ServerTime.cs" />
-    <Compile Include="Models\Ticker.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Models\Old\ResponseBase.cs" />
-    <Compile Include="Models\Old\QueryLedgersResponse.cs" />
-    <Compile Include="Models\Old\QueryOrdersResponse.cs" />
-    <Compile Include="Models\Old\QueryTradesResponse.cs" />
-    <Compile Include="Models\Old\TradeBalanceInfo.cs" />
-    <Compile Include="Models\Old\TradeInfo.cs" />
-    <Compile Include="Models\Old\WithdrawCancelResponse.cs" />
-    <Compile Include="Models\Old\WithdrawResponse.cs" />
-    <Compile Include="Models\Old\WithdrawResult.cs" />
     <Compile Include="Wrapper.cs" />
     <Compile Include="FiatCurrency.cs" />
     <Compile Include="Models\FiatCurrency\EuropeanCentralBankResponse.cs" />
     <Compile Include="Models\FiatCurrency\Currency.cs" />
+    <Compile Include="Models\Kraken\AccountBalance.cs" />
+    <Compile Include="Models\Kraken\AssetInfo.cs" />
+    <Compile Include="Models\Kraken\AssetPairs.cs" />
+    <Compile Include="Models\Kraken\CurrencyLog.cs" />
+    <Compile Include="Models\Kraken\OHLC.cs" />
+    <Compile Include="Models\Kraken\OHLCSet.cs" />
+    <Compile Include="Models\Kraken\OrderBook.cs" />
+    <Compile Include="Models\Kraken\OrderBookOrder.cs" />
+    <Compile Include="Models\Kraken\RecentSpread.cs" />
+    <Compile Include="Models\Kraken\RecentTrades.cs" />
+    <Compile Include="Models\Kraken\ServerTime.cs" />
+    <Compile Include="Models\Kraken\SpreadItem.cs" />
+    <Compile Include="Models\Kraken\Ticker.cs" />
+    <Compile Include="Models\Kraken\Trade.cs" />
+    <Compile Include="Models\Kraken\Old\AddOrderDescr.cs" />
+    <Compile Include="Models\Kraken\Old\AddOrderResponse.cs" />
+    <Compile Include="Models\Kraken\Old\AddOrderResult.cs" />
+    <Compile Include="Models\Kraken\Old\CancelOrderResponse.cs" />
+    <Compile Include="Models\Kraken\Old\CancelOrderResult.cs" />
+    <Compile Include="Models\Kraken\Old\FeeInfo.cs" />
+    <Compile Include="Models\Kraken\Old\GetDepositAddressesResponse.cs" />
+    <Compile Include="Models\Kraken\Old\GetDepositAddressesResult.cs" />
+    <Compile Include="Models\Kraken\Old\GetDepositMethodsResponse.cs" />
+    <Compile Include="Models\Kraken\Old\GetDepositMethodsResult.cs" />
+    <Compile Include="Models\Kraken\Old\GetDepositStatusResponse.cs" />
+    <Compile Include="Models\Kraken\Old\GetDepositStatusResult.cs" />
+    <Compile Include="Models\Kraken\Old\GetLedgerResponse.cs" />
+    <Compile Include="Models\Kraken\Old\GetLedgerResult.cs" />
+    <Compile Include="Models\Kraken\Old\GetOpenPositionsResponse.cs" />
+    <Compile Include="Models\Kraken\Old\GetTradeBalanceResponse.cs" />
+    <Compile Include="Models\Kraken\Old\GetTradesHistoryResponse.cs" />
+    <Compile Include="Models\Kraken\Old\GetTradesHistoryResult.cs" />
+    <Compile Include="Models\Kraken\Old\GetTradeVolumeResponse.cs" />
+    <Compile Include="Models\Kraken\Old\GetTradeVolumeResult.cs" />
+    <Compile Include="Models\Kraken\Old\GetWithdrawInfoResponse.cs" />
+    <Compile Include="Models\Kraken\Old\GetWithdrawInfoResult.cs" />
+    <Compile Include="Models\Kraken\Old\GetWithdrawStatusResponse.cs" />
+    <Compile Include="Models\Kraken\Old\GetWithdrawStatusResult.cs" />
+    <Compile Include="Models\Kraken\Old\KrakenOrder.cs" />
+    <Compile Include="Models\Kraken\Old\LedgerInfo.cs" />
+    <Compile Include="Models\Kraken\Old\OrderDescription.cs" />
+    <Compile Include="Models\Kraken\Old\OrderInfo.cs" />
+    <Compile Include="Models\Kraken\Old\PositionInfo.cs" />
+    <Compile Include="Models\Kraken\Old\QueryLedgersResponse.cs" />
+    <Compile Include="Models\Kraken\Old\QueryOrdersResponse.cs" />
+    <Compile Include="Models\Kraken\Old\QueryTradesResponse.cs" />
+    <Compile Include="Models\Kraken\Old\ResponseBase.cs" />
+    <Compile Include="Models\Kraken\Old\TradeBalanceInfo.cs" />
+    <Compile Include="Models\Kraken\Old\TradeInfo.cs" />
+    <Compile Include="Models\Kraken\Old\WithdrawCancelResponse.cs" />
+    <Compile Include="Models\Kraken\Old\WithdrawResponse.cs" />
+    <Compile Include="Models\Kraken\Old\WithdrawResult.cs" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.5">
@@ -163,6 +162,8 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Models\FiatCurrency\" />
+    <Folder Include="Models\Kraken\" />
+    <Folder Include="Models\Kraken\Old\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\System.Data.SQLite.Core.1.0.105.2\build\net45\System.Data.SQLite.Core.targets" />
