--- a/Poseidon/Poseidon.csproj
+++ b/Poseidon/Poseidon.csproj
@@ -86,7 +86,7 @@
     <Compile Include="KrakenException.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Wrapper.cs" />
+    <Compile Include="KrakenWrapper.cs" />
     <Compile Include="FiatCurrency.cs" />
     <Compile Include="Models\FiatCurrency\EuropeanCentralBankResponse.cs" />
     <Compile Include="Models\FiatCurrency\Currency.cs" />
