--- a/Poseidon/packages.config
+++ b/Poseidon/packages.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Dapper" version="1.50.4-alpha1-00070" targetFramework="net451" />
-  <package id="EntityFramework" version="6.0.0" targetFramework="net45" />
-  <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net45" />
+  <package id="Dapper" version="1.50.5" targetFramework="net451" />
+  <package id="EntityFramework" version="6.2.0" targetFramework="net451" />
+  <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net451" />
 </packages>
