--- a/Poseidon/packages.config
+++ b/Poseidon/packages.config
@@ -2,5 +2,7 @@
 <packages>
   <package id="Dapper" version="1.50.5" targetFramework="net451" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net451" />
+  <package id="MySql.Data" version="6.8.8" targetFramework="net451" />
+  <package id="MySql.Data.Entities" version="6.8.3.0" targetFramework="net451" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net451" />
 </packages>
