--- a/Poseidon/Poseidon.csproj
+++ b/Poseidon/Poseidon.csproj
@@ -147,6 +147,7 @@
     <Compile Include="Models\Kraken\Old\WithdrawResult.cs" />
     <Compile Include="Database.cs" />
     <Compile Include="Settings.cs" />
+    <Compile Include="Utilities.cs" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.5">
