--- a/Poseidon/Poseidon.csproj
+++ b/Poseidon/Poseidon.csproj
@@ -150,6 +150,7 @@
     <Compile Include="Settings.cs" />
     <Compile Include="Utilities.cs" />
     <Compile Include="CryptoCurrency.cs" />
+    <Compile Include="Logger.cs" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.5">
