Updated comments and added new comments

--- a/Poseidon/Poseidon.csproj
+++ b/Poseidon/Poseidon.csproj
@@ -21,4 +21,8 @@
         <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Models\FiatCurrency\Fixer" />
+    </ItemGroup>
+
 </Project>
