--- a/Poseidon/Poseidon.csproj
+++ b/Poseidon/Poseidon.csproj
@@ -15,8 +15,8 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="LiteDB.Core" Version="2.0.4" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="2.2.2" />
+        <PackageReference Include="MongoDB.Driver" Version="2.7.3" />
         <PackageReference Include="MySql.Data" Version="8.0.13" />
         <PackageReference Include="MySql.Data.Entity" Version="6.10.8" />
         <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
