--- a/Poseidon/Poseidon.csproj
+++ b/Poseidon/Poseidon.csproj
@@ -15,12 +15,9 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="2.2.2" />
-        <PackageReference Include="MongoDB.Driver" Version="2.7.3" />
-        <PackageReference Include="MySql.Data" Version="8.0.13" />
-        <PackageReference Include="MySql.Data.Entity" Version="6.10.8" />
+        <PackageReference Include="AWSSDK.Core" Version="3.3.32.2" />
+        <PackageReference Include="AWSSDK.DynamoDBv2" Version="3.3.17.13" />
         <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
-        <PackageReference Include="System.Data.SQLite.Core" Version="1.0.109.2" />
     </ItemGroup>
 
     <ItemGroup>
