Making testing easier and adding classes to begin adding unit tests

--- a/Poseidon/Poseidon.csproj
+++ b/Poseidon/Poseidon.csproj
@@ -21,6 +21,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <Folder Include="Logs" />
       <Folder Include="Models\FiatCurrency\Fixer" />
     </ItemGroup>
 
