--- a/buildspec.yml
+++ b/buildspec.yml
@@ -17,4 +17,4 @@ phases:
       - echo Build completed on `date`
 artifacts:
   files:
-    - target/messageUtil-1.0.jar
+    - Poseidon/bin/Debug/netcoreapp2.1/Poseidon.dll
