--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,37 @@
 asgiref==3.7.2
 certifi==2024.2.2
 cffi==1.16.0
+cfgv==3.4.0
 charset-normalizer==3.0.1
 crispy-bootstrap5==2023.10
 cryptography==42.0.4
 defusedxml==0.7.1
+distlib==0.3.8
 Django==5.0.3
 django-allauth==0.61.1
 django-crispy-forms==2.1
 django-debug-toolbar==4.2.0
+filelock==3.14.0
 gunicorn==22.0.0
+identify==2.5.36
 idna==3.4
+importlib-metadata==4.13.0
+nodeenv==1.9.0
 oauthlib==3.2.2
 packaging==23.1
+platformdirs==4.2.2
+pre-commit==3.7.1
 psycopg==3.1.18
 psycopg-binary==3.1.18
 pycparser==2.21
 PyJWT==2.8.0
 python3-openid==3.2.0
+PyYAML==6.0.1
 requests==2.28.2
 requests-oauthlib==2.0.0
 sqlparse==0.4.3
 typing_extensions==4.9.0
-urllib3==2.2.1
+urllib3==1.26.18
+virtualenv==20.26.2
 whitenoise==6.6.0
+zipp==3.19.1
